--- a/03-Service/SetterApp/app/src/main/res/layout/activity_main.xml
+++ b/03-Service/SetterApp/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,8 +10,60 @@
         android:id="@+id/setValueBtn"
         android:layout_width="185dp"
         android:layout_height="62dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="Set Value"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="334dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Switch
+        android:id="@+id/ledSwitch1"
+        android:layout_width="92dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
+        android:text="LED 1"
+        app:layout_constraintEnd_toStartOf="@+id/ledSwitch2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/setValueBtn" />
+
+    <Switch
+        android:id="@+id/ledSwitch2"
+        android:layout_width="92dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
+        android:text="LED 2"
+        app:layout_constraintEnd_toStartOf="@+id/ledSwitch3"
+        app:layout_constraintStart_toEndOf="@+id/ledSwitch1"
+        app:layout_constraintTop_toBottomOf="@+id/setValueBtn" />
+
+    <Switch
+        android:id="@+id/ledSwitch3"
+        android:layout_width="92dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
+        android:text="LED 3"
+        app:layout_constraintEnd_toStartOf="@+id/ledSwitch4"
+        app:layout_constraintStart_toEndOf="@+id/ledSwitch2"
+        app:layout_constraintTop_toBottomOf="@+id/setValueBtn" />
+
+    <Switch
+        android:id="@+id/ledSwitch4"
+        android:layout_width="93dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="LED 4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ledSwitch3"
+        app:layout_constraintTop_toBottomOf="@+id/setValueBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
